--- a/recipes/biriani.html
+++ b/recipes/biriani.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Biriani</h1>
-    <img src="/images/biriani.jpeg" alt="picha ya biriani haipo">
+    <img src="../images/biriani.jpeg" alt="picha ya biriani haipo">
     <h2>Background story of biriani</h2>
     <p>
         Lorem, ipsum dolor sit amet consectetur 
