links list fixed (ridirecting)

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <img src="images/recipes.jpeg" alt="">
     
     <ul id="homeul">
-       <li><a href="/recipes/pilau.html">Pilau</a></li>
-       <li><a href="/recipes/wali.html">Wali</a></li>
-       <li><a href="recipes/ugali.html">Ugali</a></li>
-       <li><a href="recipes/ndizi.html">Ndizi</a></li>
-       <li><a href="recipes/biriani.html">Biriani</a></li>
+       <li><a href="../recipes/pilau.html">Pilau</a></li>
+       <li><a href="../recipes/wali.html">Wali</a></li>
+       <li><a href="../recipes/ugali.html">Ugali</a></li>
+       <li><a href="../recipes/ndizi.html">Ndizi</a></li>
+       <li><a href="../recipes/biriani.html">Biriani</a></li>
     </ul>
 </body>
 </html>
