links list fixed (ridirecting)

--- a/recipes/wali.html
+++ b/recipes/wali.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Wali</h1>
-    <img src="/images/wali.jpeg" alt="picha ya wali haipo">
+    <img src="../images/wali.jpeg" alt="picha ya wali haipo">
     <h2>Background story of wali</h2>
     <p>
         Lorem, ipsum dolor sit amet consectetur 
