links list fixed (ridirecting)

--- a/recipes/ndizi.html
+++ b/recipes/ndizi.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Ndizi</h1>
-    <img src="/images/ndizi.jpeg" alt="picha ya ndizi haipo">
+    <img src="../images/ndizi.jpeg" alt="picha ya ndizi haipo">
     <h2>Background story of ndizi</h2>
     <p>
         Lorem, ipsum dolor sit amet consectetur 
