--- a/recipes/pilau.html
+++ b/recipes/pilau.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Pilau</h1>
-    <img src="/images/pilau.jpeg" alt="picha ya pilau haipo">
+    <img src="../images/pilau.jpeg" alt="picha ya pilau haipo">
     <h2>Background story of pilau</h2>
     <p>
         Lorem, ipsum dolor sit amet consectetur 
