--- a/recipes/ugali.html
+++ b/recipes/ugali.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Ugali</h1>
-    <img src="/images/ugali.jpeg" alt="picha ya ugali haipo">
+    <img src="../images/ugali.jpeg" alt="picha ya ugali haipo">
     <h2>Background story of ugali</h2>
     <p>
         Lorem, ipsum dolor sit amet consectetur 
