links list fixed (ridirecting)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body id="homebody">
     <h1>Odin Recipes</h1>
-    <img src="/images/recipes.jpeg" alt="">
+    <img src="images/recipes.jpeg" alt="">
     
     <ul id="homeul">
        <li><a href="./recipes/pilau.html">Pilau</a></li>
