--- a/recipes/wali.html
+++ b/recipes/wali.html
@@ -40,6 +40,6 @@
         <li>nobis exercit
             ationem possimus libe</li>
     </ol>
-    <a href="/"><h1>back</h1></a>
+    <a href="../"><h1>back</h1></a>
 </body>
 </html>
